@@ -1,6 +1,10 @@
 2003-09-10  Steffen Pingel  <squig@users.sourceforge.net>
 
+	* settings.cpp (addToRecentProjects): Added recent project stuff.
+
 	* mainwindow.cpp (MainWindow): Added icon.
+	(fileSaveAs): Implemnted Save As.
+	(openRecentProject): Implemnted open recent.
 
 2003-09-08  Steffen Pingel  <squig@users.sourceforge.net>
 
